--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <div class="main"><p>Будем использовать <span>yay</span>.</p></div>
   <div>
       <hr>
-      <p>Для установки пакетов из AUR при помощи <span>yay</span> используется следующуя команда:
+      <p>Для установки пакетов из AUR при помощи <span>yay</span> используется следующая команда:
       <code>$ yay -S название_пакета1 название_пакета2 ...</code>
     (можно устанавливать несколько пакетов сразу.) </p>
     <img src="./img/Screenshot_20210808_213328.png" alt="yay">
